@@ -12,7 +12,7 @@
         }
     ],
     "version": "1.0.0alpha2",
-    "time": "2021-02-24",
+    "time": "2021-03-03",
     "repositories": [
         {
             "type": "composer",
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "horde/horde-installer-plugin": "*",
+        "horde/horde-installer-plugin": "dev-master",
         "php": "^7",
         "horde/util": "^3",
         "horde/injector": "^3",
@@ -31,6 +31,9 @@
     },
     "suggest": {},
     "autoload": {
+        "psr-0": {
+            "Horde_Hordectl": "lib/"
+        },
         "psr-4": {
             "Horde\\Hordectl\\": "src/"
         }
