@@ -2,7 +2,9 @@
 v1.0.0alpha2
 ------------
 
-
+[rla] Use horde's native bootstrapping.
+[rla] Make help command more useful.
+|+
 
 
 ------------
